--- a/index.html
+++ b/index.html
@@ -97,24 +97,24 @@
                             <!-- Additional required wrapper -->
                             <div class="swiper-wrapper">
                               <!-- Slides -->
-                              <div class="swiper-slide card border-0">
-                                  <div class="card border-0 w-100 mx-auto">
+                              <div class="swiper-slide">
+                                  <div class="card">
                                     <img src="img/face1.jpg" alt="" class="image-fluid section-2-img">
                                     <div class="story-text position-absolute">
                                         <h6>view feed</h6>
                                     </div>
                                   </div>
                               </div>
-                              <div class="swiper-slide card border-0">
-                                  <div class="card border-0 w-100 mx-auto">
+                              <div class="swiper-slide">
+                                  <div class="card">
                                     <img src="img/face2.png" alt="" class="image-fluid section-2-img">
                                     <div class="story-text position-absolute">
                                         <h6>view feed</h6>
                                     </div>
                                   </div>
                               </div>
-                              <div class="swiper-slide card border-0">
-                                  <div class="card border-0 w-100 mx-auto">
+                              <div class="swiper-slide">
+                                  <div class="card">
                                     <img src="img/face3.jpg" alt="" class="image-fluid section-2-img">
                                     <div class="story-text position-absolute">
                                         <h6>view feed</h6>
@@ -122,7 +122,7 @@
                                   </div>
                               </div>
                               <div class="swiper-slide">
-                                <div class="card border-0 w-100 mx-auto">
+                                <div class="card">
                                     <img src="img/team7.jpg" alt="" class="image-fluid section-2-img">
                                     <div class="story-text position-absolute">
                                         <h6>view feed</h6>
@@ -130,7 +130,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="card border-0 w-100 mx-auto">
+                                <div class="card">
                                     <img src="img/face5.jpg" alt="" class="image-fluid section-2-img">
                                     <div class="story-text position-absolute">
                                         <h6>view feed</h6>
@@ -138,7 +138,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="card border-0 w-100 mx-auto">
+                                <div class="card">
                                     <img src="img/face6.jpg" alt="" class="image-fluid section-2-img">
                                     <div class="story-text position-absolute">
                                         <h6>view feed</h6>
@@ -146,7 +146,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="card border-0 w-100 mx-auto">
+                                <div class="card">
                                     <img src="img/team1.jpg" alt="" class="image-fluid section-2-img">
                                     <div class="story-text position-absolute">
                                         <h6>view feed</h6>
