--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
                                                 <img src="img/Simple.jpg" alt="" class="head-image" width="70px" height="80px">
                                             </div>
                                             
-                                            <p id="post-body">yo! what sup, its simple soul again. Mhen, i just want to make a shout
-                                                to my fsnd out there. They have been so wonderful. Without my fans, i am basically nothing. God bless all ya guys
-                                            </p>
+                                            <p id="post-body">yo! what sup, its simple soul again. Mhen, i fo like find one better 
+                                                black yoruba girl give Ogochuks o. I know PhemmyBlaze na baba for the women already 
+                                                but make we dey see sha</p>
                                             <div class="d-flex justify-content-between">
                                                 <button class="btn btn-light text-dark" id="update">Update</button>
                                                 <button class="btn btn-dark border-light text-light" id="view" onclick="viewPost()">view more</button>
