update form reset

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                         </div>
                                         <textarea name="text" type="text" id="body" placeholder="What is on your mind" cols="" rows="4" class="px-2 w-100 text-area userContent border-secondary rounded"></textarea>
                                         <div class="buttons d-flex w-75 mx-auto justify-content-between">
-                                            <button class="Post btn btn-dark postfeed" type="submit">Post Feed</button>
+                                            <button class="Post btn btn-dark postfeed" type="submit" onclick="myFunction()">Post Feed</button>
                                             <button class="Post btn btn-dark get-feed" type="button" id="more">Get Feeds</button>
                                         </div>
                                     </form>
